--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vibe and Tell</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vibeandtell.com/">
+    <meta property="og:title" content="Vibe and Tell">
+    <meta property="og:description" content="It's like show and tell, but for vibes.">
+    <meta property="og:image" content="https://vibeandtell.com/social.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://vibeandtell.com/">
+    <meta property="twitter:title" content="Vibe and Tell">
+    <meta property="twitter:description" content="It's like show and tell, but for vibes.">
+    <meta property="twitter:image" content="https://vibeandtell.com/social.png">
+
     <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
