--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <input type="checkbox" name="setting" aria-label="Use setting" class="absolute inset-0 appearance-none focus:outline-hidden" />
           </div>
           
-        <a href="#" class="text-sm/6 font-semibold text-gray-900 dark:text-white rounded-md px-4 py-2 border-2 border-brand/20">Log in <span class="hidden md:inline" aria-hidden="true">&rarr;</span></a>
-        <a href="#" class="text-sm/6 font-semibold text-gray-900 dark:text-white bg-brand text-white rounded-md px-4 py-2  ">Join <span class="hidden md:inline" aria-hidden="true">&plus;</span></a>
+        <a href="#" class="text-sm/6 font-semibold text-gray-900 dark:text-white rounded-xl px-4 py-2 border-2 border-brand/20">Log in <span class="hidden md:inline" aria-hidden="true">&rarr;</span></a>
+        <a href="#" class="text-sm/6 font-semibold text-gray-900 dark:text-white bg-brand text-white rounded-xl px-4 py-2  ">Join <span class="hidden md:inline" aria-hidden="true">&plus;</span></a>
       </div>
     </nav>
     <el-dialog>
@@ -129,10 +129,10 @@
         <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-18 lg:text-left">
             <span class="inline-flex items-center rounded-full dark:bg-purple-50 px-1.5 py-0.5 text-xs font-medium dark:text-purple-700 inset-ring dark:inset-ring-purple-700/10 bg-purple-900/20 text-purple-400 inset-ring-purple-400/30 mb-4">Introducing</span>
           <h2 class="text-3xl font-semibold tracking-tight text-balance text-white sm:text-5xl font-brand !font-bold">Challenges</h2>
-          <p class="mt-6 text-lg/8 text-pretty text-gray-300">Race against the clock to build products, sharpen your skills and win real prizes.</p>
+          <p class="mt-6 text-lg/8 text-pretty text-gray-300">Race against the clock to build products, shape teams, sharpen your skills and win real prizes.</p>
           <div class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start">
             <a href="#" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-xs hover:bg-gray-100 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white dark:bg-gray-700 dark:text-white dark:shadow-none dark:inset-ring dark:inset-ring-white/5 dark:hover:bg-gray-600 dark:focus-visible:outline-white"> See Current Challenges</a>
-            <a href="#" class="text-sm/6 font-semibold text-white hover:text-gray-100">
+            <a href="#" class="text-sm/6 font-semibold text-purple-300/80 hover:text-gray-100">
               Learn more
               <span aria-hidden="true">→</span>
             </a>
