--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
     <div class="md:flex md:items-center md:justify-between">
       <h3 class="text-base font-semibold text-gray-900 dark:text-white">Featured Companies and Projects</h3>
       <div class="mt-3 flex md:absolute md:top-3 md:right-0 md:mt-0">
-        <button type="button" class="inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs inset-ring inset-ring-gray-300 hover:bg-gray-50 dark:bg-white/10 dark:text-white dark:shadow-none dark:inset-ring-white/5 dark:hover:bg-white/20">Shuffle</button>
-        <button type="button" class="ml-3 inline-flex items-center rounded-md bg-brand px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand dark:bg-indigo-500 dark:shadow-none dark:hover:bg-indigo-400 dark:focus-visible:outline-indigo-500">Submit</button>
+        <button type="button" class="inline-flex items-center rounded-xl bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs inset-ring inset-ring-gray-300 hover:bg-gray-50 dark:bg-white/10 dark:text-white dark:shadow-none dark:inset-ring-white/5 dark:hover:bg-white/20">Shuffle</button>
+        <button type="button" class="ml-3 inline-flex items-center rounded-xl bg-brand px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-brand dark:bg-indigo-500 dark:shadow-none dark:hover:bg-indigo-400 dark:focus-visible:outline-indigo-500">Submit</button>
       </div>
     </div>
     <div class="mt-4">
