--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <meta property="twitter:description" content="It's like show and tell, but for vibes.">
     <meta property="twitter:image" content="https://vibeandtell.com/social.png">
 
+    <link rel="icon" href="/favicon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
